feat: remover modulo inpeace-play e dependencias de assinaturas
